syntax = "proto3";

option java_multiple_files = true;
option java_package = "vk.itmo.teamgray.sharded.storage.master";

package vk.itmo.teamgray.sharded.storage;

service ShardedStorageMasterService {
  rpc AddServer (AddServerRequest) returns (AddServerResponse);

  rpc DeleteServer (DeleteServerRequest) returns (DeleteServerResponse);

  rpc ChangeShardCount (ChangeShardCountRequest) returns (ChangeShardCountResponse);

  rpc Heartbeat (MasterHeartbeatRequest) returns (MasterHeartbeatResponse);
}

message AddServerRequest {
  //TODO Negotiate format
  string ip = 1;
  int32 port = 2;
  bool forkNewInstance = 3;
}

message AddServerResponse {
  //TODO Negotiate format
  bool success = 1;
  string message = 2;
}

message DeleteServerRequest {
  string ip = 1;
  int32 port = 2;
}

message DeleteServerResponse {
  bool success = 1;
  string message = 2;
}

message ChangeShardCountRequest {
  int32 newShardCount = 1;
}

message ChangeShardCountResponse {
  bool success = 1;
  string message = 2;
}

message MasterHeartbeatRequest {
  int64 timestamp = 1;
}

message MasterHeartbeatResponse {
  bool healthy = 1;
  int64 server_timestamp = 2;
  string status_message = 3;
}
